--- a/CODE/QuanLyThuVien/QuanLyThuVien.csproj
+++ b/CODE/QuanLyThuVien/QuanLyThuVien.csproj
@@ -59,6 +59,12 @@
     <Compile Include="DocGia.Designer.cs">
       <DependentUpon>DocGia.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSearchReader.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSearchReader.Designer.cs">
+      <DependentUpon>FormSearchReader.cs</DependentUpon>
+    </Compile>
     <Compile Include="ThemDocGia.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormSearchBook.resx">
       <DependentUpon>FormSearchBook.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSearchReader.resx">
+      <DependentUpon>FormSearchReader.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
